--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         } 
         body { 
             margin: 0; padding: 0; font-family: 'Inter', sans-serif; 
-            background: var(--dark); height: 100vh; display: flex; 
+            background: var(--dark); height: 100dvh; display: flex; 
             justify-content: center; align-items: center; overflow: hidden; 
         } 
         #phone-wrapper { 
-            width: 100vw; max-width: 412px; height: 100vh; background: var(--bg); 
+            width: 100vw; max-width: 412px; height: 100dvh; background: var(--bg); 
             display: flex; flex-direction: column; position: relative; overflow: hidden; 
             box-shadow: 0 0 50px rgba(0,0,0,0.5);
         } 
@@ -410,3 +410,4 @@ update();
 </script> 
 </body> 
 </html>
+
