--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             justify-content: center; align-items: center; overflow: hidden; 
         } 
         #phone-wrapper { 
-            width: 100vw; max-width: 412px; height: 110dvh; background: var(--bg); 
+            width: 100vw; max-width: 412px; height: 110vh; background: var(--bg); 
             display: flex; flex-direction: column; position: relative; overflow: hidden; 
             box-shadow: 0 0 50px rgba(0,0,0,0.5);
         } 
@@ -412,6 +412,7 @@ update();
 </script> 
 </body> 
 </html>
+
 
 
 
